[package]
name = "eure-schema"
version.workspace = true
edition.workspace = true
description = "Schema specification and validation for Eure"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["eure", "schema", "specification", "validation"]

[dependencies]
ahash = { workspace = true }
# Optional dependencies for external crate support
chrono = { version = "0.4", optional = true }
convert_case = "0.9"
eure-document = { workspace = true }
# Optional derive macro support
eure-macros = { workspace = true }
eure-parol = { workspace = true }
eure-tree = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
num-bigint = { workspace = true }
regex = { workspace = true }
semver = { version = "1.0", optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { version = "2.0", optional = true }
uuid = { version = "1.0", optional = true }

[dev-dependencies]

[features]
default = []
chrono = ["dep:chrono"]
semver = ["dep:semver"]
url = ["dep:url"]
uuid = ["dep:uuid"]
