[package]
name = "eure-template"
version = "0.1.0"
edition = "2024"
description = "Templating extension for EURE files"
license = "MIT OR Apache-2.0"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
readme = "README.md"
keywords = ["eure", "template", "templating", "code-generation"]

[dependencies]
