[package]
name = "eure-template"
version = "0.1.2"
edition = "2024"
description = "Templating extension for Eure files"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["code-generation", "eure", "template", "templating"]

[dependencies]
