[package]
name = "eure-template"
version.workspace = true
edition.workspace = true
description = "Templating extension for Eure files"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["code-generation", "eure", "template", "templating"]

[dependencies]
