[package]
name = "eure-toml"
version = "0.1.0"
edition = "2024"
description = "TOML conversion support for Eure format"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["conversion", "eure", "serialization", "toml"]

[dependencies]
