[package]
name = "eure-toml"
version = "0.1.0"
edition = "2024"
description = "TOML conversion support for Eure format"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["conversion", "eure", "serialization", "toml"]

[dependencies]
eure = { workspace = true }
eure-document = { workspace = true }
eure-fmt = { workspace = true }
num-bigint = { workspace = true }
query-flow = { workspace = true }
thiserror = { workspace = true }
toml_parser = "1"
