[package]
name = "eure-toml"
version.workspace = true
edition.workspace = true
description = "TOML conversion support for Eure format"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["conversion", "eure", "serialization", "toml"]

[dependencies]
eure = { workspace = true }
eure-document = { workspace = true }
eure-fmt = { workspace = true }
num-bigint = { workspace = true }
query-flow = { workspace = true }
thiserror = { workspace = true }
toml_parser = "1"
