[package]
name = "eure-tree"
version = "0.1.0"
edition = "2024"
description = "Eure tree data structure"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["ast", "data-structure", "eure", "tree"]

[dependencies]
ahash = { workspace = true, optional = true }
bon = "3.0"
parol-walker = { path = "../parol-walker", optional = true }
thiserror = { workspace = true }
thisisplural = { workspace = true }

[dev-dependencies]

[features]
default = ["std"]
std = ["ahash/runtime-rng", "ahash/std", "dep:ahash", "dep:parol-walker"]
