[package]
name = "eure-tree"
version.workspace = true
edition.workspace = true
description = "Eure tree data structure"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["ast", "data-structure", "eure", "tree"]

[dependencies]
ahash = { workspace = true, optional = true }
bon = "3.0"
thiserror = { workspace = true }
thisisplural = { workspace = true }

[dev-dependencies]

[features]
default = ["std"]
std = ["ahash/runtime-rng", "ahash/std", "dep:ahash"]
