[package]
name = "eure-value"
version = "0.1.0"
edition = "2024"
description = "Value type for EURE"
license = "MIT OR Apache-2.0"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
readme = "README.md"
keywords = ["eure", "data-types", "serialization", "value"]

[features]
default = ["std"]
std = ["dep:ahash", "regex/perf", "ahash/std", "ahash/runtime-rng"]

[dependencies]
ahash = { workspace = true, optional = true }
thisisplural = { workspace = true }
regex = { version = "1.11", default-features = false, features = ["unicode"] }
thiserror = { workspace = true }
