[package]
name = "eure-yaml"
version = "0.1.1"
edition = "2024"
description = "YAML conversion support for Eure format"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["conversion", "eure", "serialization", "yaml"]

[dependencies]
ahash = { workspace = true }
eure = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
