[package]
name = "eure-yaml"
version.workspace = true
edition.workspace = true
description = "YAML conversion support for Eure format"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["conversion", "eure", "serialization", "yaml"]

[dependencies]
ahash = { workspace = true }
eure = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
