[package]
name = "eure"
version = "0.1.2"
edition = "2024"
description = "Eure core library"
readme = "README.md"
homepage = "https://eure.dev"
repository = "https://github.com/Hihaheho/eure"
license = "MIT OR Apache-2.0"
keywords = ["configuration", "data-format", "eure", "serialization"]

[features]
default = []
http = ["dep:reqwest"]
native = ["http", "eure-env/native"]

[dependencies]
annotate-snippets = { workspace = true }
anyhow = { workspace = true }
eros = { workspace = true }
eure-env = { workspace = true }
eure-document = { workspace = true }
eure-macros = { workspace = true }
eure-parol = { workspace = true }
eure-schema = { workspace = true }
eure-tree = { workspace = true }
num-bigint = { workspace = true }
query-flow = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, optional = true }
thiserror = { workspace = true }
thisisplural = { workspace = true }
url = { workspace = true }
