[package]
name = "eure"
version.workspace = true
edition.workspace = true
description = "Eure core library"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["configuration", "data-format", "eure", "serialization"]

[features]
default = []
http = ["dep:reqwest"]
native = ["http", "eure-env/native"]

[dependencies]
annotate-snippets = { workspace = true }
anyhow = { workspace = true }
eros = { workspace = true }
eure-env = { workspace = true }
eure-document = { workspace = true }
eure-macros = { workspace = true }
eure-parol = { workspace = true }
eure-schema = { workspace = true }
eure-tree = { workspace = true }
indexmap = { workspace = true }
num-bigint = { workspace = true }
query-flow = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, optional = true }
thiserror = { workspace = true }
thisisplural = { workspace = true }
url = { workspace = true }
