[package]
name = "parol-walker-gen"
version = "0.1.0"
edition = "2021"
description = "Type-safe visitor pattern generator for Parol parsers - code generator"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hihaheho/parol-walker"
keywords = ["parol", "parser", "visitor", "codegen"]
categories = ["parser-implementations", "development-tools::build-utils"]

[dependencies]
parol.workspace = true
quote = "1"
syn = { version = "2", default-features = false, features = ["full", "parsing", "printing"] }
proc-macro2 = "1"
prettyplease = "0.2"
convert_case = "0.8.0"
thiserror.workspace = true
